--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Thai Mao",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "through2": "^3.0.1"
+  }
 }
